Registration Set Up

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Login">
                             <input type="password" class="form-control" placeholder="Password">
-                            <a class="btn btn-success" href="#/login" role="submit"> Sign Up </a>
+                            <a class="btn btn-success" href="#/login" role="submit"> Sign In </a>
                         </div><!-- class form-group -->
                     </form><!-- class navbar-form navbar-right -->
                 </div><!-- class collapse navbar-collapse -->
