--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 <body>
   
  <header>
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
 
       <!-- Brand and toggle get grouped for better mobile display -->
