--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <script src="components/angular-animate/angular-animate.js"></script>
   <script src="components/angular-route/angular-route.js"></script>
   <script src="components/angular-resource/angular-resource.js"></script>
+  <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
