--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button><!-- class navbar-toggle collapsed -->
-        <a class="navbar-brand" href="#"> News </a>
+        <a class="navbar-brand" href="#" ng-click="show()"> News </a>
       </div><!-- class navbar-header -->
 
       <!-- Collect the nav links, forms, and other content for toggling -->
