--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,10 @@
   <script src="components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="components/modernizr/js/modernizr.custom.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
-  <script src="js/services.js"></script>
 </head>
 <body ng-controller="ApplicationController">
 
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button><!-- class navbar-toggle collapsed -->
-        <a class="navbar-brand" href="#" ng-click="show()"> News </a>
+        <a class="navbar-brand" href="#/" ng-click="show()"> News </a>
       </div><!-- class navbar-header -->
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +51,7 @@
             <h1 class="navbar-text lead"><a href="#/profil">Hello {{currentUser.name}} !</a></h1>
        
       
-           <a class="btn btn-danger navbar-btn" href="#/logout">Log out</a>
+           <a class="btn btn-danger navbar-btn" href="#/logout" ng-click="logout()">Sign Out</a>
 
        </ul>
      </div><!-- class collapse navbar-collapse -->
