--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,8 @@
           </div><!-- class form-group -->
         </form><!-- class navbar-form navbar-right -->
         <ul class="nav navbar-right" ng-switch-when="true">
-          <h1 class="navbar-text lead"><a href="#/profil">Hello {{currentUser.name}} !</a></h1>
+          <h1 class="navbar-text lead">Hello {{currentUser.name}} !</h1>
+          <a class="btn btn-primary navbar-btn" href="#/profil">Edit Profil</a>
           <a class="btn btn-danger navbar-btn" href="#/logout" ng-click="logout()">Sign Out</a>
         </ul>
       </div><!-- class collapse navbar-collapse -->
