--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
           <h1 class="navbar-text lead">Hello {{currentUser.firstname}} !</h1>
           <a class="btn btn-primary navbar-btn" href="#/profil">Edit Profil</a>
           <a ng-show="currentUser.role === 'admin'" class="btn btn-primary navbar-btn" href="#/admin">Add News</a>
-          <a class="btn btn-primary navbar-btn" href="#/client">News Feed</a>
+          <a class="btn btn-primary navbar-btn" href="#/client/0">News Feed</a>
           <a class="btn btn-danger navbar-btn" href="#/logout" ng-click="logout()">Sign Out</a>
         </ul>
       </div><!-- class collapse navbar-collapse -->
