register form & angular-sanitise

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
   <!--<script src="js/dropfile.js"></script>-->
 </head>
 
-<body ng-controller="ApplicationController">
+<body ng-controller="ApplicationController" ng-cloak>
 
  <header>
 
