--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,7 @@
   </div><!-- /.modal -->
 
   <footer>
-    <nav class="navbar navbar-inverse navbar-fixed-bottom">
+    <nav class="navbar navbar-default footer navbar-fixed-bottom">
       <div class="navbar-header navbar-right">
         <p class="navbar-text lead">Christian Köcke & Noé Viricel — © Copyright 2015 </p>
       </div>
