--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title> News </title>
+  <title> News Feed</title>
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/animations.css">
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <p class="navbar-text lead"> News </p>
+          <p class="navbar-text lead"> News Feed </p>
         </div><!-- class navbar-header -->
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
   <toast></toast>
 
   <!-- Delete account Modal (confirmation) -->
-  <div id="myModal" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div id="deleteAccountModal" class="modal fade" role="dialog" aria-labelledby="deleteAccountModal" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
 
